# feedback-forge

./: .dockerignore  .env prod  .env.example  .github-auth-guide.md  .gitignore  AZURE_REDIS_SETUP.md  CICD_SUMMARY.md  COSMOS_AUTH_SWITCH.md  COSMOS_DB_INTEGRATION.md  DOCKER_GUIDE.md  FAQ_20260228_001230.md  FEATURES.md  PROJECT_STRUCTURE.md  README.md  VERSIONING_STRATEGIES.md  docker-compose.dev.yml  docker-compose.yml  faq_20260228_001230.json  mcp_config.example.json  pyproject.toml  switch-to-ssh.sh
.github/workflows/: README.md  auto-version.yml  docker-build-push.yml  semantic-release.yml.example
action-planner/: .env.example  .gitignore  Dockerfile  README.md  agent.yaml  pyproject.toml
action-planner/actionplanner/: __init__.py  __main__.py  agent.py  agent_definitions.py  agent_executor.py  jira_client.py  models.py  server.py
action-planner/tests/: test_agent.py
dashboard/: .env prod  .env.example  .gitignore  Dockerfile  README.md  nginx.conf  package.json
dashboard/src/: App.css  App.tsx  index.css
docs/: CLI_REFACTORING.md  COMPILATION_FIXES.md  COSMOS_AUTH_GUIDE.md  DOCKER_ALTERNATIVES.md  ENV_CONFIGURATION.md  FAQ_GENERATOR_GUIDE.md  FAQ_INITIALIZATION_EXAMPLES.md  FAQ_QUICKSTART.md  FAQ_RAG_TECHNICAL.md  FAQ_VIEWER_QUICKSTART.md  FAQ_VIEWER_SUMMARY.md  GITHUB_ACTIONS_ACR_SETUP.md  IMPROVEMENTS.md  LOGGING_FIX.md  PROJECT_STRUCTURE.md  RAG_GUIDE.md  RAG_QUICKSTART.md  SESSION_IMPLEMENTATION.md  SESSION_MANAGEMENT.md  TELEMETRY_GUIDE.md  TELEMETRY_QUICKSTART.md  USER_ISOLATION.md  VSCODE_DEBUG_GUIDE.md
evaluations/: .gitignore  README.md  evaluation_data.jsonl  requirements.txt  run_evaluation.py
evaluations/datasets/: README.md  test_cases.json  test_cases.jsonl
examples/: create_zendesk_tickets.py  faq_examples.py  fetch_github_feedback.py
faqs/: .env.example  .env.prod  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
faqs/src/: App.css  App.tsx  index.css
feedbackforge/: .dockerignore  CreateFAQs.Dockerfile  Dockerfile  MCP.Dockerfile  Workflow.Dockerfile  __init__.py  __main__.py  azure_client_adapter.py  chat_tools.py  dashboard_agent.py  data_store.py  data_sync_agent.py  executors.py  faq_command.py  faq_generator.py  mcp_server.py  rag_search.py  rag_setup.py  rag_tools.py  server.py  sessions.py  telemetry.py  workflow.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx
scripts/: README.md  check-container-env.sh  set-container-env.sh  test_redis.py
src/feedbackforge/: __init__.py  __main__.py  chat_tools.py  dashboard_agent.py  data_store.py  executors.py  faq_command.py  faq_generator.py  models.py  rag_setup.py  rag_tools.py  server.py  workflow.py
src/feedbackforge/templates/: welcome.html
tests/: reset_search_index.py  test_data_types.py  test_document_prep.py  test_faq_with_rag.py
