[project]
name = "feedbackforge"
version = "1.0.0"
description = "Multi-Agent Feedback Survey Analyzer with Executive Dashboard"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["ai", "agents", "feedback", "analytics", "dashboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "agent-framework==1.0.0b251209",
    "agent-framework-ag-ui==1.0.0b251209",
    "agent-framework-devui==1.0.0b251209",
    "agent-framework-azure-ai==1.0.0b251209",
    "azure-ai-agents==1.2.0b5",
    "azure-ai-projects==2.0.0b2",
    "azure-identity>=1.15.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "redis>=5.0.0",
    "azure-cosmos>=4.5.0",
    # RAG & Embeddings
    "azure-search-documents>=11.4.0",
    "openai>=1.12.0",
    # OpenTelemetry
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-instrumentation-redis>=0.43b0",
    "opentelemetry-instrumentation-httpx>=0.43b0",
    "azure-monitor-opentelemetry-exporter>=1.0.0b21",
    "azure-monitor-opentelemetry>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pyright>=1.1.0",
    "ruff>=0.4.0",
]
eval = [
    "azure-ai-evaluation>=1.1.0",  # Updated for gpt-4o compatibility
    "pandas>=2.0.0",
]

[project.scripts]
feedbackforge = "feedbackforge.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["feedbackforge"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["feedbackforge"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
